# xor-utility

./: .gitignore  CMakeLists.txt  fileprocessor.cpp  fileprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.h
